# chess

./: package-lock.json  package.json
backend/: drizzle.config.ts  package-lock.json  package.json  pyproject.toml
backend/app/: main.py
backend/app/core/: settings.py
backend/drizzle/: 0000_concerned_living_tribunal.sql
backend/drizzle/meta/: 0000_snapshot.json  _journal.json
backend/src/: config.ts  server.ts
backend/src/db/: client.ts  schema.ts
infra/: docker-compose.yml
